Read flattened consumer group response & Update ConsumerGroup rendering tests for the flattened response.